# actix-sync

./: .gitignore  Cargo.toml
backend/src/actors/: session.rs  syncserver.rs
backend/src/actors/dbserver/: models.rs
backend/src/message/: clientmessage.rs  dbmessage.rs  mod.rs
frontend/live-sync/: package.json
frontend/live-sync/src/: App.js
src/: db.rs  main.rs  message.rs  server.rs  session.rs
src/actors/: dbserver.rs  mod.rs  session.rs  syncserver.rs
src/actors/dbserver/: sample.js
src/message/: clientmessage.rs  dbmessage.rs
