[package]
name = "live-sync"
version = "0.1.0"
authors = ["yxeng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.9.0"
actix-rt="1.1"
actix-web="2.0"
actix-web-actors="2.0"
mongodb="1.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
